test/TestPhases/typechecker/valid/ignoreActivityResult.blc
module ignoreActivityResult

activity calc() returns int64
    await true
    return 0
end

activity main ()()
    _ = run calc()
end
