test/TestPhases/typechecker/invalid/FunMissingReturn.blc
module

function calc() returns float64
    
end

activity main ()()
    let x = calc()
    await false
end
